workspace_dc1/jupyterhub/copy_pod.yaml
apiVersion: apps/v1 
kind: StatefulSet 
metadata: 
  name: copy-pod
  labels: 
    app: copy-pod
spec: 
  replicas: 1
  serviceName: ""
  selector: 
    matchLabels:
      app: copy-pod
  template: 
    metadata:
      labels: 
        app: copy-pod 
    spec:
      containers:
      - name: copy-pod
        image: ubuntu
        command: ["/bin/sleep", "3650d"]
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: "/bitnami/kafka"
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data-kafka-0
